tests/semantic/valid/variable_declared_with_variable.c
/*
 * Multi-line comment.
 */
int32_t b = 2;
int32_t a = b;