tests/semantic/invalid/variable_declaration_mismatch.c
/*
 * Multi-line comment.
 */

int64_t b[2];
b = 2;
